[gd_scene load_steps=5 format=2]

[ext_resource path="res://WIP/Background.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Buttons/PlayNormal.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Buttons/PlayHover.png" type="Texture" id=3]
[ext_resource path="res://Menus/Save.gd" type="Script" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Background" parent="." instance=ExtResource( 1 )]

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 426.0
margin_top = 224.0
margin_right = 618.0
margin_bottom = 376.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Space1" type="TextureButton" parent="VBoxContainer"]
margin_right = 192.0
margin_bottom = 48.0
texture_normal = ExtResource( 3 )

[node name="Space2" type="TextureButton" parent="VBoxContainer"]
margin_top = 52.0
margin_right = 192.0
margin_bottom = 100.0
texture_normal = ExtResource( 3 )

[node name="Space3" type="TextureButton" parent="VBoxContainer"]
margin_top = 104.0
margin_right = 192.0
margin_bottom = 152.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Space1" to="." method="_on_Space1_pressed"]
[connection signal="pressed" from="VBoxContainer/Space2" to="." method="_on_Space2_pressed"]
[connection signal="pressed" from="VBoxContainer/Space3" to="." method="_on_Space3_pressed"]
